--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
        <div class="wrapper">
             <nav>
                 <div class="logo">
-                    
+                    <img src="./assets/logo.png" alt="">
+                    <span class="logo-text">SCHOOL</span>
+                </div>
+
+                <ul class="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Facilities</a></li>
+                    <li><a href="#">Admission</a></li>
+                </ul>
+
+                <div class="contact-us">
+                    <a href="#" class="primary-btn light">Contact</a>
+                </div>
+                <div class="bars-icon">
+                    <i class="fa-solid fa-bars"></i>
                 </div>
             </nav>
 
