--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
 
             <!-- *======= Hero section ============-->
             <section class="hero-section">
+                <div class="content">
+                    <h1 class="title">
+                        <span class="oragne">Empowering</span> <br>
+                        students from small <br> age <span class="sky-blue">towards vision</span>
+                    </h1>
+                    <p class="descrip">With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>
+                    <a href="#" class="primary-btn black">Enroll Now</a>
+                </div>
 
+                <div class="hero-image">
+                    <img src="./assets/hero-kids.png" alt="">
+                </div>
             </section>
        </div>
     </header>
