--- a/index.html
+++ b/index.html
@@ -51,7 +51,71 @@
     </header>
 
     <main>
+        <section class="marque wrapper">
+            <marquee behavior="" direction="left">
+                <p>
+                    At-Home Learning Resources and Study Websites for Elementary School Children
+                </p>
+            </marquee>
+        </section>
+        
 
+        <section class="standard-curriculum wrapper">
+            <h2 class="title">Standard Curriculum</h2>
+
+            <div class="curriculum-cards">
+                <div class="curriculum-card">
+                    <div class="card-image">
+                        <img src="./assets/kinder.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="heading">Kinder (3-6) Years</h3>
+                        <p class="details">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient
+                        </p>
+                        <a href="#" class="card-hyper-one">Read More</a>
+                    </div>
+                </div>
+                <div class="curriculum-card">
+                    <div class="card-image">
+                        <img src="./assets/elementary.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="heading">Elementary School</h3>
+                        <p class="details">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient
+                        </p>
+                        <a href="#" class="card-hyper-two">Read More</a>
+                    </div>
+                </div>
+
+                <div class="curriculum-card">
+                    <div class="card-image">
+                        <img src="./assets/middle.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="heading">Middle (10-16) Years</h3>
+                        <p class="details">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient
+                        </p>
+                        <a href="#" class="card-hyper-three">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="slider-buttons">
+                <button class="slider-btn left"><i class="fa-solid fa-chevron-left"></i></button>
+                <button class="slider-btn right"><i class="fa-solid fa-chevron-right"></i></button>
+            </div>
+        </section>
+
+        <!-- *======== Our stories section ============-->
+        <section class="our-stoies-section">
+            
+        </section>
     </main>
 
     <footer>
