added footer section

--- a/index.html
+++ b/index.html
@@ -203,11 +203,34 @@
 
     <footer>
       <div class="wrapper">
-        <div class="footer-logo">
-          <div class="logo">
-            <img src="" alt="">
+          <div class="footer-logo">
+            <div class="logo">
+              <img src="./assets/foot-logo.png" alt="" />
+              <span class="logo-text">Kids <br> Education</span>
+            </div>
+            <p>
+              Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+            </p>
           </div>
-        </div>
+          <div class="footer-menu">
+            <h2>About School</h2>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Facilities</a></li>
+              <li><a href="#">Admission</a></li>
+            </ul>
+          </div>
+
+          <div class="social-section">
+            <h2>Keep In Touch  </h2>
+            <div class="social-links">
+              <a href="#"><img src="./assets/fb.png" alt=""></a>
+              <a href="#"><img src="./assets/dribble.png" alt=""></a>
+              <a href="#"><img src="./assets/twitter.png" alt=""></a>
+              <a href="#"><img src="./assets/google+.png" alt=""></i></a>
+            </div>
+          </div>
       </div>
     </footer>
   </body>
