--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           </div>
       </section>
     </main>
-
+    <!-- * ======== Footer section ==============-->
     <footer>
       <div class="wrapper">
           <div class="footer-logo">
